==============================
   FoxBot Version History
==============================

--------------------------------------------------------------------------------
Version 0.800
????-??-2021
Updated by RoboCop
--------------------------------------------------------------------------------

- Added new waypoints:-
	+ botspree
	+ dustbowl_old (incomplete)
	+ dustbowl2_v3 (map broken)
	+ gen_complex
	+ insideout
	+ lbdustbowl
	+ mulch_dm2b1
	+ rock2_2way_r
	+ rock2_open_r
	+ turbine (incomplete)

- Reinstated the 'foxbot_commander' feature

- Reduced fire delay for Sniper's Auto-Rifle

- Reduced further more redundant codes and added more C++14 support
	
- Reduced overflow issues and instability crashes

- Fixed Listenserver foxbot.cfg and other .cfg load failures

- Reduced StartFrame stack by reducing some unwanted features and lines that exceed it
	
- Added more reaction time delay for bots to attack enemies as they were too quick to respond

- Improved dustbowl waypoint by removing rogue pathways in the Jump Point for Capture Point 1, 2 and 3
	
- bot_job_think.cpp adjusted for the Medic and Engineer bots to heal their team mates more often

- botdontmove, bot_chat, min_bots, max_bots, bot_bot_balance and bot_team_balance cvars should now operate properly

Known bugs:-

>> Soldier bots tend to struggle for rocket jumping in awkward areas that can block its way

>> Sniper bots tend to TK when Friendly Fire is on, when interacting with their team's sentries and teleports

--------------------------------------------------------------------------------
Version 0.793
September-26-2020
Updated by RoboCop
--------------------------------------------------------------------------------

- Fixed high bots CPU usage and buffer overruns

- Fixed load with non-metamod crashing the game

- Removed some more redundant codes

- Added some Clang compiler fixes and performance fixes
